nunaliit2-js: Prevent map move when adding a feature. Change style of "Add or Edit Button" so that it aligns with change in calibration.
Issue #437

--- a/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.tuio.css
+++ b/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.tuio.css
@@ -29,8 +29,18 @@
 }
 
 .nunaliit_tuio .n2_content_map_interaction {
-	top: 940px;
-	left: 380px;
+	bottom: 75px;
+    left: 50%;
+    top: auto;
+    right: auto;
+}
+
+.nunaliit_tuio .n2_content_map_interaction input {
+    position: absolute;
+    left: -120px;
+    top: 0px;
+    right: auto;
+    bottom: auto;
 }
 
 .nunaliit_tuio .map_interaction input
